--- a/index.html
+++ b/index.html
@@ -1,113 +1,116 @@
 <!DOCTYPE html>
 <html lang="ru">
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Main page</title>
-  <!-- <link rel="import" href=".import/portfolio.html"> -->
-  <link rel="stylesheet" href="./css/main.css">
-</head>
-
-<body class="page">
-
-  <!-- Шапка сайта -->
-  <header>
-    <nav>
-      <a href="./index.html" class='logo'>Web<span class="letters">Studio</span></a>
-      <ul class="site-nav list">
-        <li><a href="./index.html" class="accentlink"></a>Студия</li>
-        <li><a href="./portfolio.html" class="accentlink"></a>Портфолио</li>
-        <li><a href="" class="accentlink"></a>Контакты</li>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Main page</title>
+    <!-- <link rel="import" href=".import/portfolio.html"> -->
+    <link rel="stylesheet" href="./css/main.css">
+  </head>
+  
+  <body class="page">
+  <!-- Шапка сайта Header-->
+  <header class="header">
+    <nav class="navigation">
+      <a class="logo" href="./index.html" aria-label="Логотип сайта">Web<span class="accentlink">Studio</span></a>
+      <ul class="list">
+        <li class="item"><a class="link" href="./index.html" ></a>Студия</li>
+        <li class="item"><a class="link" href="./portfolio.html" ></a>Портфолио</li>
+        <li class="item"><a class="link" href="" ></a>Контакты</li>
       </ul>
     </nav>
-    <ul class="auth-nav list">
-      <li><a class="link" href="mailto:info@example.com"></a>info@devstudio.com</li>
-      <li><a href="tel:+380991111111"></a>+380961111111</li>
+
+    <ul class="list">
+      <li class="item"><a class="link" href="mailto:info@example.com"></a>info@devstudio.com</li>
+      <li class="item"><a class="link" href="tel:+380991111111"></a>+380961111111</li>
     </ul>
   </header> 
+
   <main>
-
-    <!-- hero -->
-    <section>
-      <h1>Эффективные решения для вашего бизнеса</h1>
-      <button type="button">Заказать услугу</button>
+    <!--Секция Герой Hero -->
+    <section class="hero">
+      <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+      <button class="slider-btn" type="button">Заказать услугу</button>
     </section>
 
-    <!-- Особенности компании -->
-    <section>
-      <h2>Особенности компании</h2>
-      <ul>
-        <li>
-          <h3>Внимание к деталям</h3>
-          <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+    <!-- Секция Особенности компании About -->
+    <section class="about">
+      <h2 class="section-title">Особенности компании</h2>
+      <ul class="list">
+        <li class="item">
+          <h3 class="about-title">Внимание к деталям</h3>
+          <p class="uppertitle">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
         </li>
-        <li>
-          <h3>Пунктуальность</h3>
-          <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+        <li class="item">
+          <h3 class="about-title">Пунктуальность</h3>
+          <p class="uppertitle">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
         </li>
-        <li>
-          <h3>Планирование</h3>
-          <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+        <li class="item">
+          <h3 class="about-title">Планирование</h3>
+          <p class="uppertitle">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
         </li>
-        <li>
-          <h3>Современные технологии</h3>
-          <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+        <li class="item">
+          <h3 class="about-title">Современные технологии</h3>
+          <p class="uppertitle">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
         </li>
       </ul>
     </section>
 
-    <!-- Чем мы занимаемся -->
-    <section>
-      <h2>Чем мы занимаемся</h2>
-      <ul>
-        <li><img src="./images/main-page/service/service1.jpg" alt="Верстка" width="370" /></li>
-        <li><img src="./images/main-page/service/service2.jpg" alt="Дизайн" width="370" /></li>
-        <li><img src="./images/main-page/service/service3.jpg" alt="Внешнее оформление" width="370" /></li>
+    <!-- Секция чем мы занимаемся Gallery-->
+    <section class="gallery">
+      <h2 class="gallery-title">Чем мы занимаемся</h2>
+      <ul class="list">
+        <li class="item"><img class="gallery-img" src="./images/main-page/service/service1.jpg" alt="Верстка" width="370" /></li>
+        <li class="item"><img class="gallery-img" src="./images/main-page/service/service2.jpg" alt="Дизайн" width="370" /></li>
+        <li class="item"><img class="gallery-img" src="./images/main-page/service/service3.jpg" alt="Внешнее оформление" width="370" /></li>
       </ul>
     </section>
 
-    <!-- Наша команда -->
-    <section>
-      <h2>Наша команда</h2>
-      <ul>
-        <li>
-          <img src="./images/main-page/employees/emloyees1.jpg" alt="Игорь Демьяненко" width="270" />
-          <h3>Игорь Демьяненко</h3>
-          <p lang="en">Product Designer</p>
+    <!-- Наша команда Team-->
+    <section class="team">
+      <h2 class="section-title">Наша команда</h2>
+      <ul class="list">
+        <li class="item">
+          <img class="team-img" src="./images/main-page/employees/emloyees1.jpg" alt="Игорь Демьяненко" width="270" />
+          <h3 class="team-title">Игорь Демьяненко</h3>
+          <p class="team-position" lang="en">Product Designer</p>
         </li>
-        <li>
-          <img src="./images/main-page/employees/emloyees2.jpg" alt="Ольга Репина" width="270" />
-          <h3>Ольга Репина</h3>
-          <p lang="en">Frontend Developer</p>
+        <li class="item">
+          <img class="team-img" src="./images/main-page/employees/emloyees2.jpg" alt="Ольга Репина" width="270" />
+          <h3 class="team-title">Ольга Репина</h3>
+          <p class="team-position" lang="en">Frontend Developer</p>
         </li>
-        <li>
-          <img src="./images/main-page/employees/emloyees3.jpg" alt="Николай Тарасов" width="270" />
-          <h3>Николай Тарасов</h3>
-          <p lang="en">Marketing</p>
+        <li class="item">
+          <img class="team-img" src="./images/main-page/employees/emloyees3.jpg" alt="Николай Тарасов" width="270" />
+          <h3 class="team-title">Николай Тарасов</h3>
+          <p class="team-position" lang="en">Marketing</p>
         </li>
-        <li>
-          <img src="./images/main-page/employees/emloyees4.jpg" alt="Михаил Ермаков" width="270" />
-          <h3>Михаил Ермаков</h3>
-          <p lang="en">UI Designer</p>
+        <li class="item">
+          <img class="team-img" src="./images/main-page/employees/emloyees4.jpg" alt="Михаил Ермаков" width="270" />
+          <h3 class="team-title">Михаил Ермаков</h3>
+          <p class="team-position" lang="en">UI Designer</p>
         </li>
       </ul>
     </section>
   </main>
   
-<!-- Подвал -->
-  <footer>
-    <a href="./index.html">Web<span class="letters">Studio</span></a>
-    <address>
-      <ul>
-        <li><a href="https://goo.gl/maps/sHWixux6kZh7dcSC8" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси
+<!-- Подвал сайта Footer -->
+  <footer class="footer">
+    <a aria-label="Логотип сайта" class="logo" href="./index.html">Web<span class="letters">Studio</span></a>
+    <address class="address">
+      <ul class="list">
+        <li class="item"><a class="link" href="https://goo.gl/maps/sHWixux6kZh7dcSC8" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси
             Украинки, 26</a></li>
-        <li><a class="link" href="mailto:info@example.com">info@example.com</a></li>
-        <li><a href="tel:+380991111111">tel:+380991111111</a></li>
+        <li class="item"><a class="link" href="mailto:info@example.com">info@example.com</a></li>
+        <li class="item"><a class="link" href="tel:+380991111111">tel:+380991111111</a></li>
       </ul>
     </address>
   </footer>
 </body>
 
 </html>
+
+
+
