--- a/portfolio.html
+++ b/portfolio.html
@@ -1,128 +1,130 @@
 <!DOCTYPE html>
 <html lang="ru">
+  
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+    <!-- <link rel="import" href="./index.html"> -->
+    <link rel="stylesheet" href="./css/main.css">
+  </head>
+  
+  <body>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio</title>
-  <!-- <link rel="import" href="./index.html"> -->
-  <link rel="stylesheet" href="./css/main.css">
-</head>
-
-<body>
-  <!--Шапка сайта-->
-  <header>
-    <nav>
-      <a href="./index.html">Web<span class="letters">Studio</span></a>
-      <ul>
-        <li><a href="./index.html"></a>Студия</li>
-        <li><a href="./portfolio.html"></a>Портфолио</li>
-        <li><a href=""></a>Контакты</li>
+  <!--Шапка сайта Header-->
+  <header class="header">
+    <nav class="navigator">
+      <a class="logo" aria-label="Логотип сайта" href="./index.html">Web<span class="accentlink">Studio</span></a>
+      <ul class="list">
+        <li class="item"><a class="link" href="./index.html"></a>Студия</li>
+        <li class="item"><a class="link" href="./portfolio.html"></a>Портфолио</li>
+        <li class="item"><a class="link" href=""></a>Контакты</li>
       </ul>
-    </nav>
-    <ul>
-      <li><a class="link" href="mailto:info@example.com"></a>info@devstudio.com</li>
-      <li><a href="tel:+380991111111"></a>+380961111111</li>
+    </nav >
+    <ul class="list">
+      <li class="item"><a class="link" href="mailto:info@example.com"></a>info@devstudio.com</li>
+      <li class="item"><a class="link" href="tel:+380991111111"></a>+380961111111</li>
     </ul>
   </header>
 
   <main>
     <section>
-      <!-- Фильтры -->
-      <h2>Фильтры ссылки</h2>
-      <ul>
-        <li><button type="button"></button>Все</li>
-        <li><button type="button"></button>Веб-сайты</li>
-        <li><button type="button"></button>Приложения</li>
-        <li><button type="button"></button>Дизайн</li>
-        <li><button type="button"></button>Маркетинг</li>
+      <!-- Секция Фильтры Filters-->
+      <h2 class="section-title">Фильтры ссылки</h2>
+      <ul class="list">
+        <li class="item"><button class="filters-btn"  type="button"></button>Все</li>
+        <li class="item"><button class="filters-btn"  type="button"></button>Веб-сайты</li>
+        <li class="item"><button class="filters-btn"  type="button"></button>Приложения</li>
+        <li class="item"><button class="filters-btn"  type="button"></button>Дизайн</li>
+        <li class="item"><button class="filters-btn"  type="button"></button>Маркетинг</li>
       </ul>
     </section>
     
-    <!-- Проэкты -->
-    <section>
-      <ul>
-        <li>
-          <a href="">
-            <img src="./images/portfolio/portfolio-1.jpg" alt="Фотографии трех работников компании" width="370" height="294">
+    <!--Секция проэкты Projects-->
+    <section class="projects">
+      <ul class="list">
+        <li class="item">
+          <a class="link" href="">
+            <img class="projects-img" src="./images/portfolio/portfolio-1.jpg" alt="Фотографии трех работников компании" width="370" height="294">
           </a> 
-          <h2>Технокряк</h2>
-          <p>Веб-сайт</p>
+          <h2 class="section-title" >Технокряк</h2>
+          <p class="projects-position" >Веб-сайт</p>
         </li>
-        <li>
-          <a href="">
-            <img src="./images/portfolio/portfolio-2.jpg" alt="Дизайн постера с двумя баскетболистами"  width="370" height="294">
+        <li class="item">
+          <a class="link" href="">
+            <img class="project-img" src="./images/portfolio/portfolio-2.jpg" alt="Дизайн постера с двумя баскетболистами"  width="370" height="294">
           </a>
-          <h2 lang="en">Постер New Orlean vs Golden Star</h2>
-          <p>Дизайн</p>
+          <h2 class="section-title" lang="en">Постер New Orlean vs Golden Star</h2>
+          <p class="projects-position" >Дизайн</p>
         </li>
-        <li>
-          <a href="">
-            <img src="./images/portfolio/portfolio-3.jpg" alt="Изображение приложения ресторана" width="370" height="294">
+        <li class="item">
+          <a class="link" href="">
+            <img class="projects-img" src="./images/portfolio/portfolio-3.jpg" alt="Изображение приложения ресторана" width="370" height="294">
           </a>
-          <h2 lang="en">Ресторан Seafood</h2>
-          <p>Приложение</p>
+          <h2 class="section-title" lang="en">Ресторан Seafood</h2>
+          <p class="projects-position" >Приложение</p>
         </li>
-        <li>
-          <a href="">
-            <img src="./images/portfolio/portfolio-4.jpg" alt="Наушники черного цвета" width="370" height="294">
+        <li class="item">
+          <a class="link" href="">
+            <img class="project-img" src="./images/portfolio/portfolio-4.jpg" alt="Наушники черного цвета" width="370" height="294">
           </a>
-          <h2 lang="en">Проект Prime</h2>
-          <p>Маркетинг</p>
+          <h2 class="section-title" lang="en">Проект Prime</h2>
+          <p class="projects-position" >Маркетинг</p>
         </li>
-        <li>
-          <a href="">
-            <img src="./images/portfolio/portfolio-5.jpg" alt="Примеры двух коробок разных размеров" width="370" height="294">
+        <li class="item">
+          <a class="link" href="">
+            <img class="projects-img" src="./images/portfolio/portfolio-5.jpg" alt="Примеры двух коробок разных размеров" width="370" height="294">
           </a>
-          <h2 lang="en">Проект Boxes</h2>
-          <p>Приложение</p>
+          <h2 class="section-title" lang="en">Проект Boxes</h2>
+          <p class="projects-position" >Приложение</p>
         </li>
-        <li>
-          <a href="">
-            <img src="./images/portfolio/portfolio-6.jpg" alt="Изображение проэкта главной страницы сайта" width="370"
+        <li class="item">
+          <a class="link" href="">
+            <img class="projects-img" src="./images/portfolio/portfolio-6.jpg" alt="Изображение проэкта главной страницы сайта" width="370"
               height="294">
           </a> 
-          <h2 lang="en">Inspiration has no Borders</h2>
-          <p>Веб-сайт</p>
+          <h2 class="section-title" lang="en">Inspiration has no Borders</h2>
+          <p class="projects-position" >Веб-сайт</p>
         </li>
-        <li>
-          <a href="">
-            <img src="./images/portfolio/portfolio-7.jpg" alt="Пример дизайна журнала" width="370" height="294">
+        <li class="item">
+          <a class="link" href="">
+            <img class="projects-img" src="./images/portfolio/portfolio-7.jpg" alt="Пример дизайна журнала" width="370" height="294">
           </a> 
-          <h2 lang="en">Издание Limited Edition</h2>
-          <p>Дизайн</p>
+          <h2 class="section-title" lang="en">Издание Limited Edition</h2>
+          <p class="projects-position" >Дизайн</p>
         </li>
-        <li>
-          <a href="">
-            <img src="./images/portfolio/portfolio-8.jpg" alt="Пример дизайна изделий ярлык" width="370" height="294">
+        <li class="item">
+          <a class="link" href="">
+            <img class="projects-img" src="./images/portfolio/portfolio-8.jpg" alt="Пример дизайна изделий ярлык" width="370" height="294">
           </a> 
-          <h2 lang="en">Проект LAB</h2>
-          <p>Маркетинг</p>
+          <h2 class="section-title" lang="en">Проект LAB</h2>
+          <p class="projects-position" >Маркетинг</p>
         </li>
-        <li>
-          <a href="">
-            <img src="./images/portfolio/portfolio-9.jpg" alt="Открытый компьютер" width="370" height="294">
+        <li class="item">
+          <a class="link" href="">
+            <img class="projects-img" src="./images/portfolio/portfolio-9.jpg" alt="Открытый компьютер" width="370" height="294">
           </a> 
-          <h2 lang="en">Growing Business</h2>
-          <p>Приложение</p>
+          <h2 class="section-title" lang="en">Growing Business</h2>
+          <p class="projects-position" >Приложение</p>
         </li>
       </ul>
     </section>
   </main>
 
-  <!-- Подвал -->
-  <footer>
-    <a href="./index.html">Web<span class="letters">Studio</span></a>
-    <address>
-      <ul>
-        <li><a href="https://goo.gl/maps/sHWixux6kZh7dcSC8" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси
+  <!-- Подвал сайта Footer -->
+  <footer class="footer">
+    <a aria-label="Логотип сайта" class="logo" href="./index.html">Web<span class="letters">Studio</span></a>
+    <address class="address">
+      <ul class="list">
+        <li class="item"><a class="link" href="https://goo.gl/maps/sHWixux6kZh7dcSC8" target="_blank"
+            rel="noopener noreferrer">г. Киев, пр-т Леси
             Украинки, 26</a></li>
-        <li><a class="link" href="mailto:info@example.com">info@example.com</a></li>
-        <li><a href="tel:+380991111111">tel:+380991111111</a></li>
+        <li class="item"><a class="link" href="mailto:info@example.com">info@example.com</a></li>
+        <li class="item"><a class="link" href="tel:+380991111111">tel:+380991111111</a></li>
       </ul>
     </address>
   </footer>
-</body>
+  </body>
 
 </html>
