--- a/portfolio.html
+++ b/portfolio.html
@@ -1,130 +1,197 @@
 <!DOCTYPE html>
 <html lang="ru">
-  
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
     <!-- <link rel="import" href="./index.html"> -->
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
-  
+
   <body>
+    <!--Шапка сайта Header-->
+    <header class="header">
+      <nav class="navigation">
+        <a class="logo" lang="en" href="./index.html" aria-label="Логотип сайта"
+          >Web<span class="accentlink">Studio</span></a
+        >
+        <ul class="list">
+          <li class="item"><a class="link" href="./index.html"></a>Студия</li>
+          <li class="item"><a class="link" href="./portfolio.html"></a>Портфолио</li>
+          <li class="item"><a class="link" href=""></a>Контакты</li>
+        </ul>
+      </nav>
 
-  <!--Шапка сайта Header-->
-  <header class="header">
-    <nav class="navigator">
-      <a class="logo" aria-label="Логотип сайта" href="./index.html">Web<span class="accentlink">Studio</span></a>
       <ul class="list">
-        <li class="item"><a class="link" href="./index.html"></a>Студия</li>
-        <li class="item"><a class="link" href="./portfolio.html"></a>Портфолио</li>
-        <li class="item"><a class="link" href=""></a>Контакты</li>
+        <li class="item"><a class="link" href="mailto:info@example.com"></a>info@devstudio.com</li>
+        <li class="item"><a class="link" href="tel:+380991111111"></a>+380961111111</li>
       </ul>
-    </nav >
-    <ul class="list">
-      <li class="item"><a class="link" href="mailto:info@example.com"></a>info@devstudio.com</li>
-      <li class="item"><a class="link" href="tel:+380991111111"></a>+380961111111</li>
-    </ul>
-  </header>
+    </header>
 
-  <main>
-    <section>
+    <main>
       <!-- Секция Фильтры Filters-->
-      <h2 class="section-title">Фильтры ссылки</h2>
-      <ul class="list">
-        <li class="item"><button class="filters-btn"  type="button"></button>Все</li>
-        <li class="item"><button class="filters-btn"  type="button"></button>Веб-сайты</li>
-        <li class="item"><button class="filters-btn"  type="button"></button>Приложения</li>
-        <li class="item"><button class="filters-btn"  type="button"></button>Дизайн</li>
-        <li class="item"><button class="filters-btn"  type="button"></button>Маркетинг</li>
-      </ul>
-    </section>
-    
-    <!--Секция проэкты Projects-->
-    <section class="projects">
-      <ul class="list">
-        <li class="item">
-          <a class="link" href="">
-            <img class="projects-img" src="./images/portfolio/portfolio-1.jpg" alt="Фотографии трех работников компании" width="370" height="294">
-          </a> 
-          <h2 class="section-title" >Технокряк</h2>
-          <p class="projects-position" >Веб-сайт</p>
-        </li>
-        <li class="item">
-          <a class="link" href="">
-            <img class="project-img" src="./images/portfolio/portfolio-2.jpg" alt="Дизайн постера с двумя баскетболистами"  width="370" height="294">
-          </a>
-          <h2 class="section-title" lang="en">Постер New Orlean vs Golden Star</h2>
-          <p class="projects-position" >Дизайн</p>
-        </li>
-        <li class="item">
-          <a class="link" href="">
-            <img class="projects-img" src="./images/portfolio/portfolio-3.jpg" alt="Изображение приложения ресторана" width="370" height="294">
-          </a>
-          <h2 class="section-title" lang="en">Ресторан Seafood</h2>
-          <p class="projects-position" >Приложение</p>
-        </li>
-        <li class="item">
-          <a class="link" href="">
-            <img class="project-img" src="./images/portfolio/portfolio-4.jpg" alt="Наушники черного цвета" width="370" height="294">
-          </a>
-          <h2 class="section-title" lang="en">Проект Prime</h2>
-          <p class="projects-position" >Маркетинг</p>
-        </li>
-        <li class="item">
-          <a class="link" href="">
-            <img class="projects-img" src="./images/portfolio/portfolio-5.jpg" alt="Примеры двух коробок разных размеров" width="370" height="294">
-          </a>
-          <h2 class="section-title" lang="en">Проект Boxes</h2>
-          <p class="projects-position" >Приложение</p>
-        </li>
-        <li class="item">
-          <a class="link" href="">
-            <img class="projects-img" src="./images/portfolio/portfolio-6.jpg" alt="Изображение проэкта главной страницы сайта" width="370"
-              height="294">
-          </a> 
-          <h2 class="section-title" lang="en">Inspiration has no Borders</h2>
-          <p class="projects-position" >Веб-сайт</p>
-        </li>
-        <li class="item">
-          <a class="link" href="">
-            <img class="projects-img" src="./images/portfolio/portfolio-7.jpg" alt="Пример дизайна журнала" width="370" height="294">
-          </a> 
-          <h2 class="section-title" lang="en">Издание Limited Edition</h2>
-          <p class="projects-position" >Дизайн</p>
-        </li>
-        <li class="item">
-          <a class="link" href="">
-            <img class="projects-img" src="./images/portfolio/portfolio-8.jpg" alt="Пример дизайна изделий ярлык" width="370" height="294">
-          </a> 
-          <h2 class="section-title" lang="en">Проект LAB</h2>
-          <p class="projects-position" >Маркетинг</p>
-        </li>
-        <li class="item">
-          <a class="link" href="">
-            <img class="projects-img" src="./images/portfolio/portfolio-9.jpg" alt="Открытый компьютер" width="370" height="294">
-          </a> 
-          <h2 class="section-title" lang="en">Growing Business</h2>
-          <p class="projects-position" >Приложение</p>
-        </li>
-      </ul>
-    </section>
-  </main>
+      <section>
+        <h1 class="section-title">Фильтры ссылки</h1>
+        <div class="container">
+          <ul class="list">
+            <li class="item"><button class="filters-btn" type="button"></button>Все</li>
+            <li class="item"><button class="filters-btn" type="button"></button>Веб-сайты</li>
+            <li class="item"><button class="filters-btn" type="button"></button>Приложения</li>
+            <li class="item"><button class="filters-btn" type="button"></button>Дизайн</li>
+            <li class="item"><button class="filters-btn" type="button"></button>Маркетинг</li>
+          </ul>
+        </div>
+      </section>
 
-  <!-- Подвал сайта Footer -->
-  <footer class="footer">
-    <a aria-label="Логотип сайта" class="logo" href="./index.html">Web<span class="letters">Studio</span></a>
-    <address class="address">
-      <ul class="list">
-        <li class="item"><a class="link" href="https://goo.gl/maps/sHWixux6kZh7dcSC8" target="_blank"
-            rel="noopener noreferrer">г. Киев, пр-т Леси
-            Украинки, 26</a></li>
-        <li class="item"><a class="link" href="mailto:info@example.com">info@example.com</a></li>
-        <li class="item"><a class="link" href="tel:+380991111111">tel:+380991111111</a></li>
-      </ul>
-    </address>
-  </footer>
+      <!--Секция проэкты Projects-->
+      <section class="projects">
+        <ul class="list">
+          <li class="item">
+            <a class="link" href="">
+              <img
+                class="projects-img"
+                src="./images/portfolio/portfolio-1.jpg"
+                alt="Фотографии трех работников компании"
+                width="370"
+                height="294"
+              />
+            </a>
+            <h2 class="section-title">Технокряк</h2>
+            <p class="projects-position">Веб-сайт</p>
+          </li>
+          <li class="item">
+            <a class="link" href="">
+              <img
+                class="project-img"
+                src="./images/portfolio/portfolio-2.jpg"
+                alt="Дизайн постера с двумя баскетболистами"
+                width="370"
+                height="294"
+              />
+            </a>
+            <h2 class="section-title" lang="en">Постер New Orlean vs Golden Star</h2>
+            <p class="projects-position">Дизайн</p>
+          </li>
+          <li class="item">
+            <a class="link" href="">
+              <img
+                class="projects-img"
+                src="./images/portfolio/portfolio-3.jpg"
+                alt="Изображение приложения ресторана"
+                width="370"
+                height="294"
+              />
+            </a>
+            <h2 class="section-title" lang="en">Ресторан Seafood</h2>
+            <p class="projects-position">Приложение</p>
+          </li>
+          <li class="item">
+            <a class="link" href="">
+              <img
+                class="project-img"
+                src="./images/portfolio/portfolio-4.jpg"
+                alt="Наушники черного цвета"
+                width="370"
+                height="294"
+              />
+            </a>
+            <h2 class="section-title" lang="en">Проект Prime</h2>
+            <p class="projects-position">Маркетинг</p>
+          </li>
+          <li class="item">
+            <a class="link" href="">
+              <img
+                class="projects-img"
+                src="./images/portfolio/portfolio-5.jpg"
+                alt="Примеры двух коробок разных размеров"
+                width="370"
+                height="294"
+              />
+            </a>
+            <h2 class="section-title" lang="en">Проект Boxes</h2>
+            <p class="projects-position">Приложение</p>
+          </li>
+          <li class="item">
+            <a class="link" href="">
+              <img
+                class="projects-img"
+                src="./images/portfolio/portfolio-6.jpg"
+                alt="Изображение проэкта главной страницы сайта"
+                width="370"
+                height="294"
+              />
+            </a>
+            <h2 class="section-title" lang="en">Inspiration has no Borders</h2>
+            <p class="projects-position">Веб-сайт</p>
+          </li>
+          <li class="item">
+            <a class="link" href="">
+              <img
+                class="projects-img"
+                src="./images/portfolio/portfolio-7.jpg"
+                alt="Пример дизайна журнала"
+                width="370"
+                height="294"
+              />
+            </a>
+            <h2 class="section-title" lang="en">Издание Limited Edition</h2>
+            <p class="projects-position">Дизайн</p>
+          </li>
+          <li class="item">
+            <a class="link" href="">
+              <img
+                class="projects-img"
+                src="./images/portfolio/portfolio-8.jpg"
+                alt="Пример дизайна изделий ярлык"
+                width="370"
+                height="294"
+              />
+            </a>
+            <h2 class="section-title" lang="en">Проект LAB</h2>
+            <p class="projects-position">Маркетинг</p>
+          </li>
+          <li class="item">
+            <a class="link" href="">
+              <img
+                class="projects-img"
+                src="./images/portfolio/portfolio-9.jpg"
+                alt="Открытый компьютер"
+                width="370"
+                height="294"
+              />
+            </a>
+            <h2 class="section-title" lang="en">Growing Business</h2>
+            <p class="projects-position">Приложение</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+
+    <!-- Подвал сайта Footer -->
+    <footer class="footer">
+      <div class="container">
+        <a class="logo" lang="en" aria-label="Логотип сайта" href="./index.html"
+          >Web<span class="letters">Studio</span></a
+        >
+        <address class="address">
+          <ul class="list">
+            <li class="item">
+              <a
+                class="link"
+                href="https://goo.gl/maps/sHWixux6kZh7dcSC8"
+                target="_blank"
+                rel="noopener noreferrer"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="item">
+              <a class="link" href="mailto:info@example.com">info@example.com</a>
+            </li>
+            <li class="item"><a class="link" href="tel:+380991111111">tel:+38 099 111 11 11</a></li>
+          </ul>
+        </address>
+      </div>
+    </footer>
   </body>
-
 </html>
