--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Шапка сайта Header-->
   <header class="header">
     <nav class="navigation">
-      <a class="logo" href="./index.html" aria-label="Логотип сайта">Web<span class="accentlink">Studio</span></a>
+      <a class="logo" lang="en" href="./index.html" aria-label="Логотип сайта">Web<span class="accentlink">Studio</span></a>
       <ul class="list">
         <li class="item"><a class="link" href="./index.html" ></a>Студия</li>
         <li class="item"><a class="link" href="./portfolio.html" ></a>Портфолио</li>
@@ -31,82 +31,94 @@
   <main>
     <!--Секция Герой Hero -->
     <section class="hero">
-      <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-      <button class="slider-btn" type="button">Заказать услугу</button>
+      <div class="container">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button class="slider-btn" type="button">Заказать услугу</button>
+      </div>
     </section>
 
     <!-- Секция Особенности компании About -->
     <section class="about">
       <h2 class="section-title">Особенности компании</h2>
-      <ul class="list">
-        <li class="item">
-          <h3 class="about-title">Внимание к деталям</h3>
-          <p class="uppertitle">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-        </li>
-        <li class="item">
-          <h3 class="about-title">Пунктуальность</h3>
-          <p class="uppertitle">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-        </li>
-        <li class="item">
-          <h3 class="about-title">Планирование</h3>
-          <p class="uppertitle">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-        </li>
-        <li class="item">
-          <h3 class="about-title">Современные технологии</h3>
-          <p class="uppertitle">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-        </li>
-      </ul>
+      <div class="container">
+        <ul class="list">
+          <li class="item">
+            <h3 class="about-title">Внимание к деталям</h3>
+            <p class="uppertitle">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+          </li>
+          <li class="item">
+            <h3 class="about-title">Пунктуальность</h3>
+            <p class="uppertitle">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+          </li>
+          <li class="item">
+            <h3 class="about-title">Планирование</h3>
+            <p class="uppertitle">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+          </li>
+          <li class="item">
+            h3 class="about-title">Современные технологии</h3>
+            <p class="uppertitle">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+          </li>
+        
+        </ul>
+
+      </div>
     </section>
 
     <!-- Секция чем мы занимаемся Gallery-->
     <section class="gallery">
-      <h2 class="gallery-title">Чем мы занимаемся</h2>
-      <ul class="list">
-        <li class="item"><img class="gallery-img" src="./images/main-page/service/service1.jpg" alt="Верстка" width="370" /></li>
-        <li class="item"><img class="gallery-img" src="./images/main-page/service/service2.jpg" alt="Дизайн" width="370" /></li>
-        <li class="item"><img class="gallery-img" src="./images/main-page/service/service3.jpg" alt="Внешнее оформление" width="370" /></li>
-      </ul>
+      <h2 class="section-title">Чем мы занимаемся</h2>
+      <div class="container">
+        <ul class="list">
+          <li class="item"><img class="gallery-img" src="./images/main-page/service/service1.jpg" alt="Верстка" width="370" height="294"/></li>
+          <li class="item"><img class="gallery-img" src="./images/main-page/service/service2.jpg" alt="Дизайн" width="370" height="294"/></li>
+          <li class="item"><img class="gallery-img" src="./images/main-page/service/service3.jpg" alt="Внешнее оформление" width="370" height="294"/></li>
+        </ul>
+      </div>
     </section>
 
     <!-- Наша команда Team-->
     <section class="team">
       <h2 class="section-title">Наша команда</h2>
-      <ul class="list">
-        <li class="item">
-          <img class="team-img" src="./images/main-page/employees/emloyees1.jpg" alt="Игорь Демьяненко" width="270" />
-          <h3 class="team-title">Игорь Демьяненко</h3>
-          <p class="team-position" lang="en">Product Designer</p>
-        </li>
-        <li class="item">
-          <img class="team-img" src="./images/main-page/employees/emloyees2.jpg" alt="Ольга Репина" width="270" />
-          <h3 class="team-title">Ольга Репина</h3>
-          <p class="team-position" lang="en">Frontend Developer</p>
-        </li>
-        <li class="item">
-          <img class="team-img" src="./images/main-page/employees/emloyees3.jpg" alt="Николай Тарасов" width="270" />
-          <h3 class="team-title">Николай Тарасов</h3>
-          <p class="team-position" lang="en">Marketing</p>
-        </li>
-        <li class="item">
-          <img class="team-img" src="./images/main-page/employees/emloyees4.jpg" alt="Михаил Ермаков" width="270" />
-          <h3 class="team-title">Михаил Ермаков</h3>
-          <p class="team-position" lang="en">UI Designer</p>
-        </li>
-      </ul>
+      <div class="container">
+        <ul class="list">
+          <li class="item">
+            <img class="team-img" src="./images/main-page/employees/emloyees1.jpg" alt="Игорь Демьяненко" width="270" height="260"/>
+            <h3 class="team-title">Игорь Демьяненко</h3>
+            <p class="team-position" lang="en">Product Designer</p>
+          </li>
+          <li class="item">
+            <img class="team-img" src="./images/main-page/employees/emloyees2.jpg" alt="Ольга Репина" width="270" height="260"/>
+            <h3 class="team-title">Ольга Репина</h3>
+            <p class="team-position" lang="en">Frontend Developer</p>
+          </li>
+          <li class="item">
+            <img class="team-img" src="./images/main-page/employees/emloyees3.jpg" alt="Николай Тарасов" width="270" height="260"/>
+            <h3 class="team-title">Николай Тарасов</h3>
+            <p class="team-position" lang="en">Marketing</p>
+          </li>
+          <li class="item">
+            <img class="team-img" src="./images/main-page/employees/emloyees4.jpg" alt="Михаил Ермаков" width="270" height="260"/>
+            <h3 class="team-title">Михаил Ермаков</h3>
+            <p class="team-position" lang="en">UI Designer</p>
+          </li>
+        </ul>
+      </div>
     </section>
   </main>
   
 <!-- Подвал сайта Footer -->
   <footer class="footer">
-    <a aria-label="Логотип сайта" class="logo" href="./index.html">Web<span class="letters">Studio</span></a>
-    <address class="address">
-      <ul class="list">
-        <li class="item"><a class="link" href="https://goo.gl/maps/sHWixux6kZh7dcSC8" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси
+    <div class="container">
+      <a class="logo" lang="en" aria-label="Логотип сайта" href="./index.html">Web<span class="letters">Studio</span></a>
+      <address class="address">
+        <ul class="list">
+          <li class="item"><a class="link" href="https://goo.gl/maps/sHWixux6kZh7dcSC8" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси
             Украинки, 26</a></li>
-        <li class="item"><a class="link" href="mailto:info@example.com">info@example.com</a></li>
-        <li class="item"><a class="link" href="tel:+380991111111">tel:+380991111111</a></li>
-      </ul>
-    </address>
+          <li class="item"><a class="link" href="mailto:info@example.com">info@example.com</a></li>
+          <li class="item"><a class="link" href="tel:+380991111111">tel:+38 099 111 11 11</a></li>
+        </ul>
+      </address>
+    </div>
   </footer>
 </body>
 
